--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,9 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:32c249e4c1c5a21d3f83291d1c5ffd8159c3c62380d3284a13738c0257f7c2a4
-size 291
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+plugins {
+    id 'com.android.application' version '7.1.3' apply false
+    id 'com.android.library' version '7.1.3' apply false
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
