Renamed DrunkometerActivity and some fragments to fit structure, bottom nav bar is now seen in main fragments but should not be visible in the drunkometer challenges and recommendation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,8 @@
             android:name=".OnboardingActivity"
             android:exported="false" />
         <activity
-            android:name=".DrunkometerActivity"
+            android:name=".HomeActivity"
             android:exported="false" />
-        <activity
-            android:name=".RecommendationActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
